Optimization and Objective Function 1

--- a/01_data_preprocess.ipynb
+++ b/01_data_preprocess.ipynb
@@ -792,9 +792,18 @@
   },
   {
    "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
-    "In order to remove the noise form our data, we conduct the Signal-Noise Rate to filter our data from the perspective of wavelength at first. The SG smoothing was then used to suppress the high frequency noise. Finally, we choose the SNV between MSC and it for the sake of the efficiency of the online sorting ability.\n",
-    "Next, we are going to move to the band selection part."
+    "## Save all the data."
    ],
    "metadata": {
     "collapsed": false,
@@ -805,7 +814,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
+   "outputs": [],
+   "source": [
+    "preprocessed_data = {k: snv(v) for k, v in filtered_data.items()}\n",
+    "preprocessed_data[\"bands\"] = selected_bands\n",
+    "savemat(os.path.join(data_set_dir, 'preprocessed.mat'), preprocessed_data)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
