add imporved band selection

--- a/02_band_selection.ipynb
+++ b/02_band_selection.ipynb
@@ -216,6 +216,9 @@
     "        acc = self.obj_func3(agent)\n",
     "        return band_num/36.0 + win_num/6 + (1 - acc)*10\n",
     "\n",
+    "    def obj_func4(self, agent):\n",
+    "        pass\n",
+    "\n",
     "    @staticmethod\n",
     "    def decoder(agent):\n",
     "        agent = agent.ravel()\n",
@@ -608,19 +611,8 @@
    "source": [
     "### Spirit Grey Wolf Optimization\n",
     "In most cases of our optimization tasks, we can get some prior knowledge about the optimum result. However, these prior knowledge maybe vague and not sure to be the best optimum result. Conventional optimizer can hardly take advantages of these prior knowledge. So we modified the grey wolf optimizer to handle this problem.\n",
-    "The detailed information about the spirit grey wolf optimization can be found in this [file](./03_spirit_grey_wolf.ipynb)."
+    "The detailed information about the spirit grey wolf optimization can be found in this [file](./03_spirit_grey_wolf.ipynb). After that, we will used the imporved band selection method to find the optimum value of the band combination."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
